salesforce-main/src/main/default/objects/Agent_Target__c/Agent_Target__c.object-meta.xml
<CustomObject>
    <label>Agent Target</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Agent Target ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>