salesforce-main/src/main/default/objects/Agent_Target__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <label>Intake</label>
    <required>true</required>
    <type>Date</type>
</CustomField>