salesforce-main/src/main/default/objects/Agent_Target__c/fields/Programme_Areas__c.field-meta.xml
<CustomField>
    <fullName>Programme_Areas__c</fullName>
    <label>Programme Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GDL</fullName>
            </value>
            <value>
                <fullName>LPC</fullName>
            </value>
            <value>
                <fullName>BPTC</fullName>
            </value>
            <value>
                <fullName>UCAS - Business School</fullName>
            </value>
            <value>
                <fullName>UCAS - Law School</fullName>
            </value>
            <value>
                <fullName>UCAS - Health School</fullName>
            </value>
            <value>
                <fullName>Postgraduate - Business School</fullName>
            </value>
            <value>
                <fullName>Postgraduate - Law School</fullName>
            </value>
            <value>
                <fullName>Postgraduate - Health School</fullName>
            </value>
            <value>
                <fullName>ACCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>