salesforce-main/src/main/default/objects/Agent_Target__c/fields/University__c.field-meta.xml
<CustomField>
    <fullName>University__c</fullName>
    <label>University</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BPP</fullName>
            </value>
            <value>
                <fullName>ULA</fullName>
            </value>
            <value>
                <fullName>UNIACC</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>